<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rádio Reggae</string>
    <string name="track_selection_title">Selecione</string>
    <string name="live_broadcast">stream</string>
    <string name="no_stream">Verifique sua conexão com a internet</string>
    <string name="erro_no_stream">Erro desconhecido, tente novamente!</string>
    <string name="title_hello_app">Bem vindo!</string>
    <string name="slogan_hello_app">Comece a ouvir suas rádios em um so lugar</string>
    <string name="click_exit">Clique novamente para sair!</string>
    <string name="add_favorito">Rádio adicionada aos favoritos</string>
    <string name="removed_favorito">Rádio removida dos favoritos</string>
    <string name="title_atencao">Atenção!</string>
    <string name="content_atencao_editor">Tem certeza que deseja sair?</string>
    <string name="sair">Sair</string>
    <string name="close">Fechar</string>
    <string name="error_ler_radio">Não conseguimos ver os dados da rádio</string>
    <string name="erro_nome_radio">O nome da rádio não pode conter mais de 28 caracteres.</string>
    <string name="erro_slogan_radio">O sloga da rádio não pode conter mais de 28 caracteres.</string>
    <string name="erro_urlstreaming">Url incorreta, a url não contem espaços, verifique e tente novamente</string>
    <string name="select_genero">Selecione um gênero</string>
    <string name="erro_urlstreaming_formated">O link de streaming é uma url, oque digitou esta incorreto!</string>
    <string name="erro_urlstreaming_vazio">Entre com o link da streaming</string>
    <string name="erro_slogan_radio_vazio">Digite o sloga da rádio. Ex: A rádio número um da cidade</string>
    <string name="erro_nome_radio_vazio">Entre com o nome da rádio</string>
    <string name="aguarde">Aguarde...</string>
    <string name="Estamos_salvando">Estamos salvando...</string>
    <string name="radio_existe">A rádio já existe na sua lista</string>
    <string name="todas">Todas</string>
    <string name="favoritas">Favoritas</string>
    <string name="procurando">Procurando...</string>
    <string name="certeza_delete">Tem certeza que deseja apagar:</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Apagar</string>
    <string name="deleted_success">apagado com sucesso!</string>
    <string name="search">Pesquisar</string>
    <string name="editar">Editar</string>
    <string name="shared">Compartilhar</string>
    <string name="myRadios">Minhas Rádios</string>
    <string name="add_radio">Adicionar Rádio</string>
    <string name="add_radio_descricao">Adicione uma rádio a parti de um arquivo ou entre com os dados da rádio, logo depois clique em salva.</string>
    <string name="add_file">Adicionar de um arquivo</string>
    <string name="data_radio">Dados da rádio</string>
    <string name="hint_logo_radio">Url imagem logo (Opcional)</string>
    <string name="hint_nome_radio">Nome da rádio</string>
    <string name="hint_slogan_radio">Slogan da rádio</string>
    <string name="hint_url_radio">Uri do Streaming</string>
    <string name="hint_site">Site da rádio (Opcional)</string>
    <string name="hint_zap">WhatsApp da rádio (Opcional)</string>
    <string name="save">Salvar</string>
    <string name="about">Sobre</string>
    <string name="doacao">Fazer uma doação</string>
    <string name="rate_app">Classificar app</string>
    <string name="share_app">Compartilhar app</string>
    <string name="contact">Contato</string>
    <string name="more_app">Mais apps</string>
    <string name="sem_radios">Você ainda não adicionou\nnenhuma rádio</string>
    <string name="sem_favoritos">Você ainda não favoritou\nnenhuma rádio</string>
    <string name="home_descricao">Para ouvir uma rádio primeiro você adiciona uma usando o botão Adicionar rádio.</string>
    <string name="loading">Carregando...</string>
    <string name="sobre_info">Este aplicativo é um sistema de rádio streaming.\n Para adicionar uma rádio você precisa fornecer o link de streaming fornecido pela rádio, depois de adicionar a sua rádio ficara disponível para ouvir a qualquer momento e qualquer lugar.\n A função de compartilhar a sua rádio foi criada para agilizar a forma de adicionar uma nova rádio, basta clicar no arquivo compartilhado que o aplicativo ira salvar sua rádio na lista das rádios.\n\n Quando você doa o aplicativo ira fica cada vez melhor e mais rápido com muitas outros funções que futuramente será adicionada.\n\n Aplicativo desenvolvido pela empresa de Software BirdSoft Technologies.</string>
    <string name="como_funciona">Como funciona?</string>
    <string name="nada_encontrado">Nada encontrado!</string>
    <string name="digite_here">Digite aqui...</string>
    <string name="radio">Rádios</string>
    <string name="update_radio_info">Edite os dados necessários, para salvar clique em atualizar.</string>
    <string name="update">Atualizar</string>
    <string name="error_conection">Não conseguimos se conectar</string>
    <string name="agredecimento">Muito obrigado!</string>
    <string name="donate_msg">Agradecemos a sua ajuda, muito obrigado!</string>
    <string name="site">Site</string>
    <string name="changed_background">Troca papel de parede</string>

</resources>