<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:background="@drawable/background_reggae"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/menu_backgound"
    app:statusBarBackground="@color/colorStatuBar2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:background="@drawable/background_dark_translucido"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="24dp"/>
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_menu"
                app:navigationIcon="@drawable/ic_action_back_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:tag="key_sobre"
                android:onClick="onMenuItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:textColor="@color/colorAccentGrey"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"/>
            </LinearLayout>
            <LinearLayout
                android:tag="key_rate"
                android:onClick="onMenuItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:textColor="@color/colorAccentGrey"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_app"/>
            </LinearLayout>
            <LinearLayout
                android:tag="key_share_app"
                android:onClick="onMenuItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:textColor="@color/colorAccentGrey"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_app"/>
            </LinearLayout>
            <LinearLayout
                android:tag="key_contato"
                android:onClick="onMenuItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:textColor="@color/colorAccentGrey"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact"/>
            </LinearLayout>
            <LinearLayout
                android:tag="key_mais_apps"
                android:onClick="onMenuItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:textColor="@color/colorAccentGrey"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_app"/>
            </LinearLayout>
            <LinearLayout
                android:tag="key_changed_background"
                android:onClick="onMenuItem"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:clickable="true"
                android:gravity="center_vertical"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground">
                <TextView
                    android:textColor="@color/colorAccentGrey"
                    android:textSize="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/changed_background"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>