<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/backgroundRadio"
    android:background="@drawable/background_2"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"  >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:navigationIcon="@drawable/ic_action_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/app_name"
                    android:fontFamily="@font/gill_sans_mt"
                    android:textColor="@color/colorAccentGrey"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:textAlignment="center"
                    android:layout_marginRight="80dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.Toolbar>

            <LinearLayout
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/title_hello_app"
                    android:background="@drawable/background_player"
                    android:padding="20dp"
                    android:id="@+id/titulo"
                    android:textSize="34px"
                    android:textColor="@color/colorAccentGrey"
                    android:fontFamily="@font/gotham"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:background="@drawable/background_player"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:text="@string/slogan_hello_app"
            android:id="@+id/slogan"
            android:textSize="28px"
            android:textColor="@color/colorAccentGrey"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:fontFamily="@font/gotham"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/layout_radio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="18dp"/>
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">
                <ImageButton
                    android:tint="@color/colorAccentGrey"
                    android:id="@+id/btn_volume"
                    android:onClick="onVolumeClick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_valume_max"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_marginRight="10dp"/>
                <SeekBar
                    android:id="@+id/seekbar_volume"
                    android:progress="8"
                    android:max="10"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageButton
                    android:onClick="onShare"
                    android:clickable="true"
                    android:src="@drawable/ic_action_share"
                    android:tint="@color/colorAccent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"/>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:src="@drawable/exo_controls_previous"
                    android:onClick="onPrevious"
                    android:id="@+id/onPrevious"
                    app:fabSize="mini"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/playerState"
                        android:onClick="onPlayPause"
                        android:layout_centerInParent="true"
                        android:src="@drawable/exo_controls_play"
                        app:fabSize="normal"
                        android:clickable="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <ProgressBar
                        android:visibility="gone"
                        android:id="@+id/exo_progress"
                        android:layout_width="48dp"
                        android:layout_centerInParent="true"
                        android:layout_height="48dp"/>
                </RelativeLayout>
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:onClick="onNext"
                    android:id="@+id/onNext"
                    android:src="@drawable/exo_controls_next"
                    app:fabSize="mini"
                    android:layout_marginLeft="20dp"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <CheckBox
                    android:id="@+id/btn_favorito"
                    android:onClick="onFavorito"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:button="@drawable/btn_favorito_check"
                    android:buttonTint="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/bottom_sheet"
        app:layout_behavior="@string/bottom_sheet_behavior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
